[project]
name = "durable-sync"
version = "0.3.0"
description = "Keep your tools in sync on autopilot — durable, idempotent data sync from any source into any destination, built on Temporal."
readme = "README.md"
requires-python = ">=3.11"  # BaseExceptionGroup (auth-error taxonomy) is builtin in 3.11+
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Angie Byron", email = "angela.byron@temporal.io" }]
keywords = ["temporal", "sync", "etl", "idempotent", "workflow", "oauth", "integration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "temporalio>=1.7",
]

[project.urls]
Homepage = "https://github.com/temporal-community/durable-sync"
Repository = "https://github.com/temporal-community/durable-sync"
Issues = "https://github.com/temporal-community/durable-sync/issues"

[project.optional-dependencies]
# Each integration pulls only what it needs, so a GitHub->Asana user never
# installs the Notion MCP SDK, etc.
notion = ["mcp>=1.2", "requests>=2.31"]   # Notion destination: MCP transport + pure-HTTP OAuth
github = ["httpx>=0.27"]                   # GitHub source
llm = ["anthropic>=0.40"]                  # generic LLM enrichment hook (durable_sync.enrich.llm)
asana = ["httpx>=0.27"]                    # Asana destination (direct REST + self-serve PAT)
luma = ["httpx>=0.27"]                      # Luma source (events)
jira = ["httpx>=0.27"]                       # Jira source + destination (issues; REST + email/API-token Basic)
youtube = ["httpx>=0.27"]                   # YouTube source (channel uploads)
contentful = ["httpx>=0.27"]                # Contentful source (CDA/CMA)
crypto = ["cryptography>=42"]              # opt-in payload encryption codec
dev = ["pytest>=8.0", "python-dotenv>=1.0"]
all = ["mcp>=1.2", "requests>=2.31", "httpx>=0.27", "cryptography>=42"]

# Connector discovery (issue #10). Apps resolve a connector by NAME via
# durable_sync.registry, never by import path — so a connector can move between
# core and an out-of-repo durable-sync-contrib package without breaking wiring.
# Each entry point resolves directly to a Source/Destination class. A provider
# that is both registers in both groups (Jira/Notion/Luma); one that ships two
# destinations registers both (Contentful: REST CMA + MCP).
[project.entry-points."durable_sync.sources"]
github = "durable_sync.connectors.github.source:GitHubSource"
notion = "durable_sync.connectors.notion.source:NotionSource"
luma = "durable_sync.connectors.luma.source:LumaSource"
youtube = "durable_sync.connectors.youtube.source:YouTubeSource"
contentful = "durable_sync.connectors.contentful.source:ContentfulSource"
jira = "durable_sync.connectors.jira.source:JiraSource"

[project.entry-points."durable_sync.destinations"]
notion = "durable_sync.connectors.notion.destination:NotionDestination"
asana = "durable_sync.connectors.asana.destination:AsanaDestination"
luma = "durable_sync.connectors.luma.destination:LumaDestination"
contentful = "durable_sync.connectors.contentful.destination:ContentfulDestination"
contentful-mcp = "durable_sync.connectors.contentful.mcp_destination:ContentfulMcpDestination"
jira = "durable_sync.connectors.jira.destination:JiraDestination"

[build-system]
requires = ["setuptools>=77"]  # PEP 639 SPDX license expression + license-files
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["durable_sync*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
